Referencing GitHub repo for reslter due to bugs that cause errors with tests.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "async": "0.1.22",
-    "restler": "2.0.1",
+    "restler": "git+https://github.com/danwrong/restler.git",
     "lodash": "1.2.1",
     "express": "3.x"
   },
