--- a/package.json
+++ b/package.json
@@ -25,12 +25,21 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "async": "0.1.22",
-    "restify": "2.6.0",
+    "express": "3.x",
     "lodash": "1.2.1",
-    "express": "3.x"
+    "restify": "2.6.0",
+    "waterline-errors": "^0.10.0"
   },
   "devDependencies": {
-    "mocha": "~1.10.0",
-    "waterline-adapter-tests": "0.9.0"
+    "mocha": "^1.10.0",
+    "captains-log": "^0.11.8",
+    "waterline-adapter-tests": "^0.10.0"
+  },
+  "waterlineAdapter": {
+    "waterlineVersion": "^0.10.0",
+    "interfaces": [
+      "semantic",
+      "queryable"
+    ]
   }
 }
