If resource name not set in config, try to get it from pluralized form of collectionName, like in Rails.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "3.x",
     "lodash": "1.2.1",
     "restify": "2.6.0",
+    "underscore.inflections": "^0.2.1",
     "waterline-errors": "^0.10.0"
   },
   "devDependencies": {
