refactors hooks to be async
This enables calling async functions inside the hooks, before returning
the request/response.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
+    "async": "^1.4.2",
     "lodash": "^3.9.3",
     "restify": "^3.0.3",
     "superagent": "^1.2.0"
